--- a/cmmsApp/templates/footer.html
+++ b/cmmsApp/templates/footer.html
@@ -1,83 +1,78 @@
-  <!DOCTYPE html>
-  {% load static %}
-  <html lang="en">
+<!DOCTYPE html>
+{% load static %}
+<html lang="en">
 
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!--=============== REMIXICONS ===============-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+  <!--=============== REMIXICONS ===============-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 
 
 
 
-    <!--=============== CSS ===============-->
-    <link rel="stylesheet" href="{% static 'css/footer.css' %}">
-    <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-TKQV8LKX');</script>
-<!-- End Google Tag Manager -->
+  <!--=============== CSS ===============-->
+  <link rel="stylesheet" href="{% static 'css/footer.css' %}">
 
-  </head>
 
-  <body>
+</head>
+
+<body>
+  <footer class="footer">
+    <div class="footer-container">
+      <div class="footer-heading">
+        <h2>Enhancing performance through innovation</h2>
+           <img class="nav__logo1" src="{% static 'images/logo.png' %}">
+
+      </div>
+
+      <div class="footer-left">
+        <p>Get in touch</p>
+        <p>+61 (02) 8318 1490</p>
+        <p><a href="enquiries@iengaust.com.au">enquiries@iengaust.com.au</a></p>
+        <!-- <p><a href="/services/">Services</a></p> -->
+      </div>
+
+      <div class="footer-links">
+        <ul>
+        <li><a href="/about">About</a></li>
+            <li><a href="/product/">Products</a></li>
+            <li><a href="/services/">Services</a></li>
+            <li><a href="/contact/">Contact us</a></li>
+        </ul>
+        <!-- <ul style="padding-right: 40px;margin-right: 40px;">
+          <li><a href="/solutions">Resources</a></li>
+          <li><a href="/neplan-electricity/">Neplan Electricity</a></li>
+          <li><a href="/neplan-gas-water-heating/">Neplan G,W &amp; H/C </a></li>
+          <li><a href="/neplan-anywhere/">Neplan Anywhere</a></li>
+          <li><a href="/neplan-additional-solutions/">Additional Solutions</a></li>
+        </ul> -->
+      </div>
+
+      <div class="footer-bottom">
+        <div class="social-icons">
+          <a href="https://www.facebook.com/iEngineeringAustralia" target="_blank"><i class="fab fa-facebook-f"></i></a>
+          <a href="https://www.instagram.com/iengineering_group/" target="_blank"><i class="fab fa-instagram"></i></a>
+          <!-- Twitter X Icon -->
+          <a href="https://x.com/iEngAust" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
+
+          <a href="https://www.linkedin.com/company/iengineeringgroup" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+          <a href="https://www.youtube.com/@iengineeringgroup6136/videos" target="_blank"><i class="fab fa-youtube"></i></a>
+        </div>
+        <div class="copyright">
+          © 2025 iEngineering Australia Pty Ltd.
+        </div>
+      </div>
+    </div>
+  </footer>
 <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TKQV8LKX"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
-    
-    <footer class="footer">
-      <div class="footer-container">
-        <div class="footer-heading">
-          <h2>Enhancing performance through innovation</h2>
+</body>
 
-        </div>
-
-        <div class="footer-left">
-          <p>Get in touch</p>
-          <p>+61 (02) 8318 1490</p>
-          <p><a href="mailto:info@iengaust.com.au">enquiries@iengaust.com.au</a></p>
-
-        </div>
-
-        <div class="footer-links">
-          <ul>
-            <li><a href="/about">About</a></li>
-            <li><a href="/product/">Products</a></li>
-            <li><a href="/services/">Services</a></li>
-            <li><a href="/contact/">Contact us</a></li>
-          </ul>
-          {% comment %} <ul style="padding-right: 40px;margin-right: 40px;">
-            <li><a href="/neplan-electricity/">GSA</a></li>
-            <li><a href="/neplan-gas-water-heating/">GSA FD </a></li>
-            <li><a href="/neplan-anywhere/">XGSA FD</a></li>
-            <li><a href="/neplan-additional-solutions/">XGSA TD</a></li>
-          </ul> {% endcomment %}
-        </div>
-
-        <div class="footer-bottom">
-          <div class="social-icons">
-            <a href="https://www.facebook.com/iEngineeringAustralia" target="_blank"><i class="fab fa-facebook-f"></i></a>
-            <a href="https://www.instagram.com/iengineering_group/" target="_blank"><i class="fab fa-instagram"></i></a>
-            <!-- Twitter X Icon -->
-            <a href="https://x.com/iEngAust" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
-
-            <a href="https://www.linkedin.com/company/iengineeringgroup" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-            <a href="https://www.youtube.com/@iengineeringgroup6136/videos" target="_blank"><i class="fab fa-youtube"></i></a>
-          </div>
-          <div class="copyright">
-            © 2025 iEngineering Australia Pty Ltd.
-          </div>
-        </div>
-      </div>
-    </footer>
-
-  </body>
-
-  </html>
+</html>
