--- a/cmmsApp/templates/gsafd.html
+++ b/cmmsApp/templates/gsafd.html
@@ -71,11 +71,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             and screening/bonding effectiveness under harmonics and fast transients.
           </p>
 
-          <ul class="gsa-stats">
-            <li><i class="fa-solid fa-wave-square"></i> Wideband analysis</li>
-            <li><i class="fa-solid fa-plug-circle-bolt"></i> Coupling &amp; interference</li>
-            <li><i class="fa-solid fa-shield-halved"></i> Screening &amp; bonding checks</li>
-          </ul>
+          {% comment %} <ul class="gxsa-stats">
+            <li> Wideband analysis</li>
+            <li> Coupling &amp; interference</li>
+            <li> Screening &amp; bonding checks</li>
+          </ul> {% endcomment %}
           <br>
           <div class="cta-row-neplan-home">
             <a href="#" class="btn-neplan-home js-open-demo">
