--- a/cmmsApp/templates/request_demo_modal.html
+++ b/cmmsApp/templates/request_demo_modal.html
@@ -68,7 +68,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </div>
 
       <p class="privacy">
-        Your privacy is important to us. We’ll only use your information to arrange the demo and to communicate about NEPLAN Software.
+        Your privacy is important to us. We’ll only use your information to arrange the demo and to communicate about XGSlab Software.
       </p>
 
       <div class="modal__footer">
