--- a/cmmsApp/templates/xgsafd.html
+++ b/cmmsApp/templates/xgsafd.html
@@ -80,12 +80,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             realistic soil and return paths.
           </p>
 
-          <ul class="gxsa-stats">
-            <li><i class="fa-solid fa-diagram-project"></i> Conductive &amp; inductive coupling</li>
-            <li><i class="fa-solid fa-wave-square"></i> Wideband field evaluation</li>
-            <li><i class="fa-solid fa-user-shield"></i> ICNIRP/EN compliance checks</li>
-          </ul>
+          {% comment %} <ul class="gxsa-stats">
+            <li> Conductive &amp; inductive coupling</li>
+            <li> Wideband field evaluation</li>
+            <li> ICNIRP/EN compliance checks</li>
+          </ul> {% endcomment %}
 
+          <br>
           <div class="cta-row-neplan-home">
             <a href="#" class="btn-neplan-home js-open-demo">
               Request Demo <span class="arrow">→</span>
